--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </form>
         </section>
 
-        <section class="Resultados">
+        <section class="resultados">
             <div class="gorjeta-total">
                 <p>
                     <strong>Gorjeta</strong> <br>
