--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                  <div class="pessoas">
                     <label for="pessoas">Quantidade de pessoas</label>
-                    <p>Nao pode ser zero</p>
+                    <p id="erro">Nao pode ser zero</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="ícone da pessoa">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0" >
@@ -65,6 +65,8 @@
                 </p>
                 <strong>$ 0.00</strong>
             </div>
+
+            <button>Limpar</button>
         </section>
     </main>
 </body>
