--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                  </div>
 
                  <div class="pessoas">
-                    <label for="pessoas">Quantidade de pessoas</label>
-                    <p id="erro">Nao pode ser zero</p>
-                    <div>
+                    <div class="textos">
+                        <label for="pessoas">Quantidade de pessoas</label>
+                        <p id="erro">Nao pode ser zero</p>
+                    </div>
+
+                    <div class="input-box erro">
                         <img src="./images/icon-person.svg" alt="ícone da pessoa">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0" >
                     </div>
@@ -63,7 +66,7 @@
                     <strong>Total</strong> <br>
                     / pessoa
                 </p>
-                <strong>$ 0.00</strong>
+                <strong>$0.00</strong>
             </div>
 
             <button>Limpar</button>
